# Voxl

./: .gitignore  Cargo.toml
assets/blocks/: bedrock.ron  birch_log.ron  blackstone.ron  cherry_log.ron  cherry_planks.ron  coal_block.ron  sand.ron  (+26 more)
blocks/: README.md  acacia_log.ron  acacia_log.toml  acacia_planks.ron  acacia_planks.toml  ao.ron  ao.toml  bedrock.toml  birch_log.toml  birch_planks.ron  birch_planks.toml  blackstone.toml  cherry_log.toml  cherry_planks.toml  chiseled_polished_blackstone.ron  chiseled_polished_blackstone.toml  chiseled_red_sandstone.toml  chiseled_stone_bricks.toml  coal_block.toml  coal_ore.ron  coal_ore.toml  cobblestone.toml  copper_block.ron  copper_block.toml  copper_ore.ron  copper_ore.toml  cracked_polished_blackstone_bricks.ron  cracked_polished_blackstone_bricks.toml  cracked_stone_bricks.ron  cracked_stone_bricks.toml  crimson_planks.toml  cut_red_sandstone.toml  cut_sandstone.ron  cut_sandstone.toml  dark_oak_log.toml  dark_oak_planks.toml  diamond_block.ron  diamond_block.toml  diamond_ore.ron  diamond_ore.toml  (+84 more)
data/: biome_source.ron
models/: README.md  acacia_log.ron  acacia_log.toml  acacia_planks.toml  bedrock.ron  bedrock.toml  birch_log.toml  birch_planks.ron  birch_planks.toml  blackstone.ron  blackstone.toml  cherry_log.toml  cherry_planks.ron  cherry_planks.toml  chiseled_polished_blackstone.ron  chiseled_polished_blackstone.toml  chiseled_red_sandstone.toml  chiseled_stone_bricks.ron  chiseled_stone_bricks.toml  coal_block.toml  coal_ore.toml  cobblestone.ron  cobblestone.toml  copper_block.toml  copper_ore.toml  cracked_polished_blackstone_bricks.ron  cracked_polished_blackstone_bricks.toml  cracked_stone_bricks.ron  cracked_stone_bricks.toml  crimson_planks.ron  crimson_planks.toml  cube.ron  cube.toml  cut_red_sandstone.toml  cut_sandstone.toml  dark_oak_log.ron  dark_oak_log.toml  dark_oak_planks.toml  diamond_block.ron  diamond_block.toml  (+81 more)
src/: lib.rs  main.rs
voxl-client/: Cargo.toml
voxl-client/assets/config/: user_config.toml
voxl-client/src/: chunk_tracker_compat.rs  client_systems.rs  dirty_chunks.rs  embedded_server.rs  game_state.rs  lib.rs  main.rs  server_chunk_tracker.rs  server_integration.rs
voxl-client/src/app/: mod.rs
voxl-client/src/chat/: manager.rs  mod.rs
voxl-client/src/debug/: commands.rs  mod.rs
voxl-client/src/input/: keybinds.rs  mod.rs  player.rs
voxl-client/src/networking/: async_task.rs  client.rs  mod.rs  packet_handler.rs
voxl-client/src/performance/: mod.rs
voxl-client/src/raycast/: mod.rs  ray.rs  types.rs
voxl-client/src/renderer/: atlas.rs  chunk_tracker.rs  frustum.rs  mod.rs  pipeline.rs  queue_system.rs  state.rs  ui.rs
voxl-client/src/renderer/voxel_map/: ao.rs  dirty.rs  mesh.rs  mod.rs
voxl-client/src/ui/: mod.rs  settings_menu.rs
voxl-client/src/worldgen/: mod.rs
voxl-common/: Cargo.toml
voxl-common/src/: chat.rs  commands.rs  lib.rs  network.rs  paths.rs  worldgen.rs
voxl-common/src/config/: mod.rs
voxl-common/src/entities/: components.rs  mod.rs  systems.rs
voxl-common/src/voxel/: chunk.rs  face.rs  mod.rs  model.rs  registry.rs  world.rs
voxl-server/: Cargo.toml
voxl-server/src/: chat.rs  commands.rs  connection.rs  dispatcher.rs  lib.rs  main.rs  player.rs  server.rs
(+83 files in other folders)
