[workspace]
members = [
    "voxl-common",
    "voxl-client",
    "voxl-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Voxl Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Graphics
wgpu = "0.19"
winit = "0.30.13"
glam = "0.32.1"

# ECS
hecs = "0.11"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
env_logger = "0.11.9"

# Utilities
pollster = "0.4.0"
bytemuck = { version = "1.22", features = ["derive"] }
image = "0.25"

# Config file parsing
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
toml = "0.8"

# Multithreading
rayon = "1.10"
crossbeam-channel = "0.5"

# UI
egui = "0.27"
egui-wgpu = "0.27"

# Noise pour la génération de terrain
noise = "0.9"
