[package]
name = "voxl-common"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialisation
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
toml = "0.8"
bincode = "1.3"

# Logging
tracing = "0.1.44"

# Math
glam = "0.32.1"

# Utilities
bytemuck = { version = "1.22", features = ["derive"] }

# Noise pour la génération de terrain
noise = "0.9"

# ECS
hecs = "0.11"
